# magic-loc-ng

./: Cargo.toml  README.md  cfg.toml  partitions.csv
.cargo/: config.toml
scripts/: rust-gdb-esp
src/: configuration.rs  console.rs  display.rs  hist_buffer.rs  indicator.rs  main.rs  multipin_spi.rs  serial_comm.rs  utils.rs
src/configuration/: mod.rs  registry.rs
src/console/: apps.rs  mod.rs
src/console/apps/: battery.rs  conf.rs  imu_recv.rs  imu_stream.rs  iperf.rs  mag_test.rs  mod.rs  uwb_client.rs  uwb_master.rs  uwb_monitor.rs  uwb_send.rs
src/inertial/: mod.rs
src/network/: mod.rs
src/ranging/: mod.rs  uwb_driver.rs
src/serial/: handlers.rs  mod.rs
