[package]
name = "magic-loc-ng"
version = "0.1.0"
authors = ["Fan Jiang <i@fanjiang.me>"]
edition = "2021"
license = "Apache-2.0"
resolver = "2"

[dependencies]
esp-wifi = { version = "0.7.*", default-features = false, features = [
    "esp32s3",
    "esp-now",
    "async",
    "ps-min-modem",
    "wifi",
    "defmt",
    "phy-enable-usb",
] }
icm426xx = "0.2.*"
dw3000-ng = { package = "dw3000-ng", version = "0.8.0", features = ["defmt"] }
magic-loc-protocol = { package = "magic-loc-protocol", git = "https://github.com/ProfFan/magic-loc-protocol.git", branch = "main" }

esp-hal = { version = "0.19.0", default-features = false, features = [
    "place-spi-driver-in-ram",
    "async",
    "defmt",
] }
esp-hal-embassy = { version = "0.2.0" }

static_cell = { version = "*", features = ["nightly"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }

esp-backtrace = { version = "0.13", default-features = false, features = [
    "esp32s3",
    "panic-handler",
    "exception-handler",
    "defmt",
    "colors",
    "halt-cores",
    "custom-pre-backtrace",
] }
esp-println = { version = "0.10.*", default-features = false, features = [
    "esp32s3",
    "log",
    # "defmt-espflash",
    "jtag-serial",
    "critical-section",
] }

bbqueue = { version = "0.5.1" }

# esp-println = { version = "0.7.1", default-features = false, features = [
esp-storage = { version = "0.3", features = ["esp32s3"] }
embedded-storage = "0.3.0"
# postcard = { version = "1.0.*", features = ["use-defmt"] }

# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets
# disabling default-features fixes this
serde = { version = "1.0.*", default-features = false }
binrw = { version = "0.14.0", default-features = false }
bytemuck = "1.16.*"

critical-section = { version = "1.1.2", default-features = false }

# log = { version = "0.4.18" }
defmt = { package = "defmt", version = "0.3.8", features = ["encoding-rzcobs"] }
# defmt-rtt = "0.4.1"
esp-alloc = { version = "0.4.0" }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "medium-ieee802154",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-svc = { version = "0.28.0", default-features = false, features = [] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
heapless = { version = "0.8", default-features = false, features = [
    "defmt-03",
] }
embassy-executor = { version = "0.5.0", features = ["nightly"] }
embassy-time = { version = "0.3.1", features = [
    "defmt",
    "generic-queue-16",
    # "tick-hz-16_000_000",
] }
embassy-futures = "*"
embassy-sync = "0.6.0"
embassy-embedded-hal = { version = "0.1", features = ["defmt"] }

scopeguard = { version = "^1.2.0", default-features = false }

esp-partition-table = "~0.1"
arbitrary-int = "^1.2"

anyhow = { version = "1.0", default-features = false }

[profile.dev.package.esp-storage]
opt-level = 3

[profile.dev]
lto = "thin"
[profile.release]
lto = "fat"
opt-level = 3
debug = true

[package.metadata.espflash]
partition_table = "partitions.csv"

[patch.crates-io]
esp-println = { git = "https://github.com/esp-rs/esp-hal", rev = "1424f2a43d587b3556bec85abd9bf5691b5b13d8", package = "esp-println" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "1424f2a43d587b3556bec85abd9bf5691b5b13d8", package = "esp-backtrace" }
