[package]
name = "magic-loc-ng"
version = "0.1.0"
authors = ["Fan Jiang <i@fanjiang.me>"]
edition = "2021"
license = "Apache-2.0"
resolver = "2"

[dependencies]
esp-fast-serial = { version = "0.3.0", path = "../esp-fast-serial" }
esp-wifi-sys = { version = "0.6.*" }
icm426xx = { version = "0.2.*", default-features = false, path = "../icm426xx", features = ["async"] }
dw3000-ng = { package = "dw3000-ng", version = "1.0.0", features = ["defmt", "async"] }
magic-loc-protocol = { package = "magic-loc-protocol", git = "https://github.com/ProfFan/magic-loc-protocol.git", branch = "main" }

embedded-graphics = { version = "0.8.0" }
display-interface-i2c = "^0.5"
display-interface = "^0.5"
ssd1306 = { version = "0.8.*", git = "https://github.com/sjoerdsimons/ssd1306", branch = "async", features = [
    "async",
] }

esp-hal = { version = "0.21.0", default-features = false, features = [
    "defmt",
] }
# esp32s3 = "0.26.0"
esp-hal-embassy = { version = "0.4.0" }

static_cell = { version = "*", features = ["nightly"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }

esp-wifi = { version = "0.10.*", default-features = false, features = [
    "esp-now",
    "async",
    "sniffer",
    "ps-min-modem",
    "wifi",
    "defmt",
    "phy-enable-usb",
    "esp-alloc"
] }
esp-backtrace = { version = "0.14.*", default-features = false, features = [
    "panic-handler",
    "exception-handler",
    "defmt",
    "colors",
    # "halt-cores",
    "custom-halt",
] }
esp-println = { version = "0.12.*", default-features = false, features = [
    "log",
    # "defmt-espflash",
    "jtag-serial",
    "critical-section",
] }

bbqueue = { version = "0.5.1" }

# esp-println = { version = "0.7.1", default-features = false, features = [
esp-storage = { version = "0.3", features = ["nor-flash"] }
embedded-storage = "0.3.0"
embedded-storage-async = "0.4"
sequential-storage = { version = "3.0", features = ["defmt-03"] }

# postcard = { version = "1.0.*", features = ["use-defmt"] }

# By default, `serde` has the `std` feature enabled, which makes it unsuitable for embedded targets
# disabling default-features fixes this
serde = { version = "1.0.*", default-features = false }
binrw = { version = "0.14.0", default-features = false }
bytemuck = "1.18.*"

critical-section = { version = "1.1.2", default-features = false }

# log = { version = "0.4.18" }
defmt = { package = "defmt", version = "0.3.8", features = ["encoding-rzcobs"] }
# defmt-rtt = "0.4.1"
esp-alloc = { version = "0.5.*" }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "proto-igmp",
    "proto-ipv4",
    "socket-tcp",
    "socket-icmp",
    "socket-udp",
    "medium-ethernet",
    "medium-ieee802154",
    "proto-dhcpv4",
    "socket-raw",
    "socket-dhcpv4",
] }
embedded-svc = { version = "0.28.0", default-features = false, features = [] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
heapless = { version = "0.8", default-features = false, features = [
    "defmt-03",
] }
embassy-executor = { version = "0.6.0", features = ["nightly"] }
embassy-time = { version = "0.3.1", features = [
    "defmt",
    "generic-queue-16",
    # "tick-hz-16_000_000",
] }
embassy-futures = "*"
embassy-sync = "0.6.0"
embassy-embedded-hal = { version = "0.2", features = ["defmt"] }

scopeguard = { version = "^1.2.0", default-features = false }

esp-partition-table = "~0.1"
arbitrary-int = "^1.2"

anyhow = { version = "1.0", default-features = false }

ieee80211 = { version = "0.5", features = ["defmt"] }
scroll = { version = "0.12", default-features = false }
mac-parser = { version = "0.1.6", default-features = false }

nb = "1.0"
menu = "0.6.0"
# noline = { version = "0.2.0", default-features = false }
# rhai = { version = "1.19.0", features = ["no_std", "no_optimize", "no_module", "f32_float", "only_i64"], default-features = false }

[profile.dev.package.esp-storage]
opt-level = 3

[profile.dev]
lto = "thin"
opt-level = 1

[profile.release]
lto = "fat"
opt-level = 3
debug = true
codegen-units = 1

# [profile.release.package.rhai]
# opt-level = "z"

[features]
esp32s3 = [
    "esp-wifi/esp32s3",
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-storage/esp32s3",
    "esp-hal-embassy/esp32s3",
]
default = ["esp32s3"]

[package.metadata.espflash]
partition_table = "partitions.csv"

[patch.crates-io]
# esp-println = { git = "https://github.com/esp-rs/esp-hal", rev = "c26600f94349ab055fa12671273644611f18fdea", package = "esp-println" }
# esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "c26600f94349ab055fa12671273644611f18fdea", package = "esp-backtrace" }
# esp-wifi = { git = "https://github.com/esp-rs/esp-hal", rev = "c26600f94349ab055fa12671273644611f18fdea", package = "esp-wifi" }
# esp-wifi-sys = { git = "https://github.com/esp-rs/esp-wifi-sys", rev = "30d43461335cf5f58317dfc78a5397f48dae2e27", package = "esp-wifi-sys" }
# esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "c26600f94349ab055fa12671273644611f18fdea", package = "esp-hal" }
# esp-hal-embbassy = { git = "https://github.com/esp-rs/esp-hal", rev = "c26600f94349ab055fa12671273644611f18fdea", package = "esp-hal-embassy" }
# esp-metadata = { git = "https://github.com/esp-rs/esp-hal", rev = "c26600f94349ab055fa12671273644611f18fdea", package = "esp-metadata" }
# esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "c26600f94349ab055fa12671273644611f18fdea", package = "esp-alloc" }
dw3000-ng = { path = "../dw3000" }
